--- a/index.html
+++ b/index.html
@@ -5,8 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+<!-- header start  -->
+<header>
+
+</header>
+<!-- header end -->
+<!-- main section -->
+<main>
+    <!-- section 1 start -->
+<section class="container">
+    <div class="top-player">
+        <h2 class="top-title">Top player</h2>
+        <div class="players-bar">
+            <div class="player">
+                <img src="leader-board-main/images/players/player-1.png" alt="">
+                <h3>Jhon Abraham</h3>
+            </div>
+            <div class="player">
+                <img src="leader-board-main/images/players/player-2.png" alt="">
+                <h3>Jhonson charles</h3>
+            </div>
+            <div class="player">
+                <img src="leader-board-main/images/players/player-3.png" alt="">
+                <h3>Khaled rahman</h3>
+            </div>
+            <div class="player">
+                <img src="leader-board-main/images/players/player-4.png" alt="">
+                <h3>Jabed khan</h3>
+            </div>
+            <div class="player">
+                <img src="leader-board-main/images/players/player-5.png" alt="">
+                <h3>Ibrahim koresi</h3>
+            </div>
+            <div class="player">
+                <img src="leader-board-main/images/players/player-6.png" alt="">
+                <h3>tahmid alam</h3>
+            </div>
+        </div>
+    </div>
+</section>
+    <!-- section 1 end -->
+</main>
+<!-- main section end -->
 </body>
 </html>
