--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <script src="https://kit.fontawesome.com/55c58191b9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -93,7 +94,63 @@
     <div class="latest-course">
         <h2 class="top-title">Latest Courses</h2>
         <div class="course-details">
-          
+          <div class="course-info">
+            <img src="leader-board-main/images/courses/course-1.png" alt="">
+            <h3>React the complate <br> guid 2020</h3>
+            <p>Reed Krakoff</p>
+            <div class="course-rating">
+                <div>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"></i>   
+                </div>
+                <p>4.5</p>
+                <div class="time-zone">
+                    <i class="fa-regular fa-clock"></i>
+                    01:30 PM
+                </div>
+            </div>
+          </div>
+          <div class="course-info">
+            <img src="leader-board-main/images/courses/course-2.png" alt="">
+            <h3>Powerpoint 2022 <br> Master powerpoint cour</h3>
+            <p>Walter Scott</p>
+            <div class="course-rating">
+                <div>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"></i>   
+                </div>
+                <p>4.5</p>
+                <div class="time-zone">
+                    <i class="fa-regular fa-clock"></i>
+                    01:30 PM
+                </div>
+            </div>
+          </div>
+          <div class="course-info">
+            <img src="leader-board-main/images/courses/course-3.png" alt="">
+            <h3> The complete javascript <br> course 2022</h3>
+            <p>Reed Krakoff.</p>
+            <div class="course-rating">
+                <div>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star empty"></i>   
+                </div>
+                <p>4.5</p>
+                <div class="time-zone">
+                    <i class="fa-regular fa-clock"></i>
+                    01:30 PM
+                </div>
+            </div>
+          </div>
         </div>
     </div>
 
